# affinidi-webvh-service

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  deny.toml
.github/workflows/: ci.yml  upstream-drift.yml
did-hosting-client/: Cargo.toml
did-hosting-client/src/: agent_names.rs  client.rs  lib.rs  trust_tasks.rs
did-hosting-client/src/auth/: message.rs  mod.rs
did-hosting-client/tests/: wiremock_integration.rs
did-hosting-common/: Cargo.toml  README.md
did-hosting-common/src/: client.rs  control_client.rs  did.rs  did_hosting_tasks.rs  did_ops.rs  didcomm_types.rs  lib.rs  types.rs  v1_aliases.rs  witness_client.rs
did-hosting-common/src/method/: mod.rs  parse.rs  web.rs  webvh.rs
did-hosting-common/src/server/: acl.rs  cli_acl.rs  config.rs  didcomm_profile.rs  didcomm_unpack.rs  domain_purge.rs  error.rs  identity.rs  identity_drain.rs  identity_rotate.rs  metrics.rs  mod.rs  vta_setup.rs  (+3 more)
did-hosting-common/tests/: dynamodb_single_table.rs  offline_phase1.rs  secret_store_backends.rs  trust_task_url_consistency.rs
did-hosting-control/: Cargo.toml  README.md
did-hosting-control/src/: config.rs  did_ops.rs  health.rs  identity_rotation.rs  lib.rs  main.rs  messaging.rs  outbox.rs  path_locks.rs  registry.rs  server.rs  server_push.rs  setup.rs  setup_recipe.rs  trust_tasks_did.rs  trust_tasks_infra.rs  tsp.rs
did-hosting-control/tests/: acl_agent_names.rs  agent_names_rest.rs  change_owner_integration.rs  change_owner_rest.rs  didcomm_dispatcher.rs  multi_domain_acl.rs  self_managed_provisioning.rs  service_badges_rest.rs  trust_task_infra.rs  trust_task_parity.rs  vta_provisioned_auth.rs
did-hosting-daemon/: Cargo.toml  README.md
did-hosting-daemon/src/: config.rs  main.rs  setup.rs  setup_recipe.rs
did-hosting-server/: Cargo.toml  README.md  build.rs
did-hosting-server/examples/: client.rs  perf_test.rs
did-hosting-server/src/: backup.rs  bootstrap.rs  config.rs  control_register.rs  did_ops.rs  health.rs  identity_rotation.rs  lib.rs  main.rs  messaging.rs  purge_sweep.rs  server.rs  setup.rs  setup_recipe.rs  tsp.rs
did-hosting-server/tests/: agent_names.rs  migration_replay.rs  refresh_signer_binding.rs  smoke.rs  tsp_sync.rs
did-hosting-ui/: app.json  package-lock.json  package.json
did-hosting-ui/app/: _layout.tsx  index.tsx  login.tsx
did-hosting-ui/components/: AgentNameChips.tsx  ControlLink.tsx  NavBar.tsx  ServiceBadges.tsx  ServiceOverview.tsx  UsageChart.tsx
did-hosting-ui/lib/: api.ts  domain.ts  session-key.ts  wallet.ts
docs/: bootstrap_startup.md  didcomm-did-management-protocol.md  identity-rotation-runbook.md  multi-method-hosting-spec.md  openapi.json  rollback.md  trust-tasks-acl-migration.md  tsp-transport.md
examples/: did-hosting-control-build.toml  did-hosting-daemon-build.toml  did-hosting-server-build.toml  webvh-control-build.toml  webvh-daemon-build.toml  webvh-server-build.toml  webvh-witness-build.toml
tasks/: did-hosting-rollout-todo.md  todo.md
webvh-common/: Cargo.toml  README.md
webvh-common/src/: client.rs  control_client.rs  did.rs  did_ops.rs  didcomm_types.rs  error.rs  lib.rs  types.rs  witness_client.rs
webvh-common/src/server/: acl.rs  cli.rs  cli_acl.rs  config.rs  didcomm_profile.rs  didcomm_unpack.rs  error.rs  health.rs  metrics.rs  mnemonic.rs  mod.rs  stats_collector.rs  tasks.rs  vta_cache.rs  vta_setup.rs
webvh-common/src/server/auth/: extractor.rs  jwt.rs  mod.rs  session.rs
webvh-common/src/server/passkey/: mod.rs  routes.rs  store.rs
webvh-common/src/server/secret_store/: aws.rs  azure.rs  gcp.rs  keyring.rs  mod.rs  plaintext.rs
webvh-common/src/server/setup_recipe/: apply.rs  schema.rs
webvh-common/src/server/store/: cosmosdb.rs  dynamodb.rs  firestore.rs  fjall.rs  mod.rs  redis.rs
webvh-control/: Cargo.toml  README.md  build.rs
webvh-control/src/: acl.rs  config.rs  did_ops.rs  error.rs  frontend.rs  health.rs  lib.rs  main.rs  messaging.rs  registry.rs  server.rs  server_push.rs  setup.rs  setup_recipe.rs  vta_bootstrap.rs
webvh-control/tests/: change_owner_integration.rs  change_owner_rest.rs  didcomm_dispatcher.rs  didcomm_e2e_smoke.rs  self_managed_provisioning.rs
webvh-daemon/: Cargo.toml  README.md
webvh-daemon/src/: config.rs  main.rs  setup.rs  setup_recipe.rs
webvh-example/: Cargo.toml
webvh-example/src/: main.rs
webvh-server/: Cargo.toml  README.md  build.rs
webvh-server/examples/: client.rs  perf_test.rs
webvh-server/src/: backup.rs  bootstrap.rs  cache.rs  config.rs  control_register.rs  did_ops.rs  error.rs  frontend.rs  health.rs  lib.rs  main.rs  messaging.rs  mnemonic.rs  server.rs  setup.rs  setup_recipe.rs  watcher_push.rs
webvh-server/src/acl/: mod.rs
webvh-server/src/auth/: extractor.rs  jwt.rs  session.rs
webvh-server/src/passkey/: mod.rs  store.rs
webvh-server/src/routes/: acl.rs  auth.rs  config.rs  did_manage.rs  did_public.rs  didcomm.rs  mod.rs  passkey.rs  stats.rs
webvh-server/src/secret_store/: aws.rs  gcp.rs  keyring.rs  mod.rs  plaintext.rs
webvh-server/src/stats/: mod.rs
webvh-server/src/store/: cosmosdb.rs  dynamodb.rs  firestore.rs  fjall.rs  mod.rs  redis.rs
webvh-server/src/tests/: api.rs
webvh-server/tests/: smoke.rs
webvh-ui/: package-lock.json  package.json
webvh-ui/app/: _layout.tsx  index.tsx  login.tsx
webvh-ui/components/: AffinidiLogo.tsx  AuthProvider.tsx  NavBar.tsx  UsageChart.tsx
webvh-ui/lib/: alert.ts  api.ts  theme.ts
webvh-watcher/: Cargo.toml  README.md
webvh-watcher/src/: config.rs  error.rs  health.rs  lib.rs  main.rs  server.rs  setup.rs  store.rs  watcher_ops.rs
webvh-watcher/src/routes/: did_public.rs  health.rs  mod.rs  sync.rs
webvh-witness/: Cargo.toml  README.md
webvh-witness/src/: config.rs  error.rs  health.rs  identity_rotation.rs  lib.rs  main.rs  messaging.rs  server.rs  setup.rs  setup_recipe.rs  signing.rs  store.rs  witness_ops.rs
webvh-witness/src/auth/: backend.rs  mod.rs
webvh-witness/src/routes/: acl.rs  auth.rs  didcomm.rs  mod.rs  witness.rs
webvh-witness/src/secret_store/: mod.rs
(+84 files in other folders)
