[workspace]
members = ["webvh-common", "webvh-server", "webvh-watcher", "webvh-witness"]
resolver = "3"

[workspace.package]
description = "Affinidi WebVH Service. Collection of services to operate WebVH DID in production"
edition = "2024"
authors = ["Glenn Gore <glenn@affinidi.com>"]
readme = "README.md"
homepage = "https://affinidi.com/"
license = "Apache-2.0"
keywords = ["ssi", "affinidi", "webvh"]
repository = "https://github.com/affinidi/affinidi-webvh-service"
publish = true
rust-version = "1.88.0"

[workspace.dependencies]
# webvh-common = { version = "0.0.1", path = "./webvh-common"}

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
