[workspace]
members = [
  "webvh-common",
  "webvh-control",
  "webvh-daemon",
  "webvh-server",
  "webvh-watcher",
  "webvh-witness",
]
resolver = "3"

[workspace.package]
description = "Affinidi WebVH Service. Collection of services to operate WebVH DID in production"
edition = "2024"
authors = ["Glenn Gore <glenn@affinidi.com>"]
readme = "README.md"
homepage = "https://affinidi.com/"
license = "Apache-2.0"
keywords = ["ssi", "affinidi", "webvh"]
repository = "https://github.com/affinidi/affinidi-webvh-service"
publish = true
rust-version = "1.94.0"

[workspace.dependencies]

# Affinidi Trust Development Kit
affinidi-tdk = "0.6"
affinidi-messaging-didcomm-service = "0.2"
affinidi-tdk-common = "0.5"
affinidi-messaging-didcomm = "0.13"
affinidi-secrets-resolver = "0.5"


# Cancellation token for DIDComm service
tokio-util = { version = "0.7", features = ["rt"] }

# Async runtime
tokio = { version = "1", features = [
  "rt-multi-thread",
  "macros",
  "net",
  "sync",
  "signal",
] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"

# Embedded key-value store
fjall = "3"

# Identifiers
uuid = { version = "1", features = ["v4", "serde"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Random number generation
rand = "0.10"

# Cryptography
ed25519-dalek = "2"
multibase = "0.9"

# JWT
jsonwebtoken = { version = "10", features = ["rust_crypto"] }

# Axum extras (typed headers for Bearer auth)
axum-extra = { version = "0.12", features = ["typed-header"] }

# Base64 encoding
base64 = "0.22"

# WebAuthn / Passkey
webauthn-rs = { version = "0.5", features = [
  "danger-allow-state-serialisation",
] }
webauthn-rs-proto = "0.5"
url = "2"

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Interactive prompts
dialoguer = "0.12"

# Static file embedding (for UI feature)
rust-embed = { version = "8", features = ["compression"] }
mime_guess = "2"

# DID resolver
affinidi-did-resolver-cache-sdk = "0.8"

# HTTP client
reqwest = { version = "0.13", features = ["json"] }

# Error handling (lightweight)
anyhow = "1"

# DID WebVH
didwebvh-rs = "0.5"

# VTA SDK — TEMPORARY LOCAL PATH DEP.
#
# Required until verifiable-trust-infrastructure publishes vta-sdk 0.5.x
# to crates.io. The 0.5 release adds the new template-driven provisioning
# flow (ProvisionRequestBuilder, TemplateBootstrapPayload, sealed-transfer)
# and the `webvh-service` built-in DID template that this workspace targets.
#
# Before publishing any webvh crate, revert this to:
#   vta-sdk = { version = "0.5", features = ["session", "provision-integration"] }
# and delete the workspace-level `[patch.crates-io]` section if one was added.
vta-sdk = { path = "../../fpp/verifiable-trust-infrastructure/vta-sdk", features = [
  "session",
  "provision-integration",
  "provision-client",
] }

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
