[package]
name = "affinidi-webvh-daemon"
description = "WebVH Daemon — Unified binary embedding server, witness, watcher, and control plane"
version = "0.2.0"
edition.workspace = true
authors.workspace = true
readme = "README.md"
homepage.workspace = true
license.workspace = true
keywords.workspace = true
repository.workspace = true
publish.workspace = true
rust-version.workspace = true

[features]
default = ["keyring", "store-fjall", "ui", "passkey"]
ui = ["affinidi-webvh-control/ui"]
passkey = ["affinidi-webvh-control/passkey"]
keyring = [
  "affinidi-webvh-server/keyring",
  "affinidi-webvh-witness/keyring",
  "affinidi-webvh-control/keyring",
]
aws-secrets = [
  "affinidi-webvh-server/aws-secrets",
  "affinidi-webvh-witness/aws-secrets",
  "affinidi-webvh-control/aws-secrets",
]
gcp-secrets = [
  "affinidi-webvh-server/gcp-secrets",
  "affinidi-webvh-witness/gcp-secrets",
  "affinidi-webvh-control/gcp-secrets",
]
metrics = [
  "affinidi-webvh-server/metrics",
  "affinidi-webvh-control/metrics",
]
store-fjall = [
  "affinidi-webvh-server/store-fjall",
  "affinidi-webvh-witness/store-fjall",
  "affinidi-webvh-watcher/store-fjall",
  "affinidi-webvh-control/store-fjall",
]
store-redis = [
  "affinidi-webvh-server/store-redis",
  "affinidi-webvh-witness/store-redis",
  "affinidi-webvh-watcher/store-redis",
  "affinidi-webvh-control/store-redis",
]
store-dynamodb = [
  "affinidi-webvh-server/store-dynamodb",
  "affinidi-webvh-witness/store-dynamodb",
  "affinidi-webvh-watcher/store-dynamodb",
  "affinidi-webvh-control/store-dynamodb",
]
store-firestore = [
  "affinidi-webvh-server/store-firestore",
  "affinidi-webvh-witness/store-firestore",
  "affinidi-webvh-watcher/store-firestore",
  "affinidi-webvh-control/store-firestore",
]
store-cosmosdb = [
  "affinidi-webvh-server/store-cosmosdb",
  "affinidi-webvh-witness/store-cosmosdb",
  "affinidi-webvh-watcher/store-cosmosdb",
  "affinidi-webvh-control/store-cosmosdb",
]

[[bin]]
name = "webvh-daemon"
path = "src/main.rs"

[dependencies]
affinidi-webvh-common = { path = "../webvh-common", features = ["server-core", "store-fjall"] }
affinidi-webvh-server = { path = "../webvh-server" }
affinidi-webvh-witness = { path = "../webvh-witness" }
affinidi-webvh-watcher = { path = "../webvh-watcher" }
affinidi-webvh-control = { path = "../webvh-control" }
affinidi-did-resolver-cache-sdk = "0.8"
affinidi-tdk = { workspace = true }
axum = "0.8"
clap = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
toml = "1.0"
tower-http = { version = "0.6", features = ["trace"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
webauthn-rs = { workspace = true }
