[package]
name = "webvh-example"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
affinidi-tdk = { workspace = true }
affinidi-did-resolver-cache-sdk = { workspace = true }
didwebvh-rs = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
url = { workspace = true }
