[package]
name = "webvh-example"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
affinidi-webvh-common = { path = "../webvh-common" }
tokio = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
