[package]
name = "affinidi-webvh-server"
description = "WebVH Server, handles management and serving of WebVH Content"
version = "0.0.1"
edition.workspace = true
authors.workspace = true
readme = "README.md"
homepage.workspace = true
license.workspace = true
keywords.workspace = true
repository.workspace = true
publish.workspace = true
rust-version.workspace = true

[features]
default = []
ui = ["dep:rust-embed", "dep:mime_guess"]

[dependencies]
affinidi-tdk = { workspace = true }
affinidi-did-resolver-cache-sdk = "0.7"
axum = "0.8"
axum-extra = { workspace = true }
base64 = { workspace = true }
bip39 = "2"
chrono = { workspace = true }
clap = { workspace = true }
dialoguer = { workspace = true }
ed25519-dalek = { workspace = true }
fjall = { workspace = true }
hex = "0.4"
jsonwebtoken = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = "0.9"
tower-http = { version = "0.6", features = ["trace"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
rust-embed = { workspace = true, optional = true }
mime_guess = { version = "2", optional = true }

[dev-dependencies]
tempfile = "3"
