[package]
name = "affinidi-webvh-server"
description = "WebVH Server, handles management and serving of WebVH Content"
version = "0.0.1"
edition.workspace = true
authors.workspace = true
readme = "README.md"
homepage.workspace = true
license.workspace = true
keywords.workspace = true
repository.workspace = true
publish.workspace = true
rust-version.workspace = true
build = "build.rs"

[features]
default = ["keyring"]
ui = ["dep:rust-embed", "dep:mime_guess"]
keyring = ["dep:keyring"]
aws-secrets = ["dep:aws-sdk-secretsmanager", "dep:aws-config"]
gcp-secrets = ["dep:google-cloud-secretmanager-v1", "dep:google-cloud-auth", "dep:bytes"]

[[bin]]
name = "webvh-server"
path = "src/main.rs"

[dependencies]
affinidi-webvh-common = { path = "../webvh-common" }
affinidi-tdk = { workspace = true }
affinidi-did-resolver-cache-sdk = "0.7"
axum = "0.8"
axum-extra = { workspace = true }
base64 = { workspace = true }
bip39 = "2"
chrono = { workspace = true }
clap = { workspace = true }
dialoguer = { workspace = true }
didwebvh-rs = { workspace = true }
ed25519-dalek = { workspace = true }
fjall = { workspace = true }
hex = "0.4"
jsonwebtoken = { workspace = true }
multibase = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = "1.0"
tower-http = { version = "0.6", features = ["trace"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
webauthn-rs = { workspace = true }
webauthn-rs-proto = { workspace = true }
rust-embed = { workspace = true, optional = true }
mime_guess = { version = "2", optional = true }
keyring = { version = "3", optional = true }
aws-sdk-secretsmanager = { version = "1", optional = true }
aws-config = { version = "1", features = ["behavior-version-latest"], optional = true }
google-cloud-secretmanager-v1 = { version = "1", optional = true }
google-cloud-auth = { version = "1", optional = true }
bytes = { version = "1", optional = true }

[dev-dependencies]
tempfile = "3"
anyhow.workspace = true
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
